test: add comprehensive test coverage for exception handling and domain logic